# Venturi

./: ._FPGA_PCIE_HELLO_WORLD.md  .gitignore  FPGA_PCIE_HELLO_WORLD.md  RC_gearbox256.v  README.md
.cache/clangd/index/: basic_dev.cpp.428C6C5400BC7302.idx  basic_dev.h.0B18AA8E9883BB01.idx  basic_ring_buffer.cpp.6462781E0546061F.idx  basic_ring_buffer.h.8271255C5CC9230F.idx  device.h.238C6C5F03308B86.idx  dma_memory_allocator.cpp.49FFC8A5C78733FF.idx  dma_memory_allocator.h.179AC739C51181ED.idx  factory.cpp.65C10A21B4187A52.idx  factory.h.D5088CE254A8A370.idx  fpga_hello_dev.cpp.692C70475341981C.idx  fpga_hello_dev.h.364B9036C8E85476.idx  ixgbe_ring_buffer.cpp.A304A39C9011A6B0.idx  ixgbe_ring_buffer.h.F1E3635656015F82.idx  ixgbe_type.h.90EF34F7D76B1EC9.idx  log.h.44C0E30083035B55.idx  memory_pool.cpp.35B5CEF593AAF4F5.idx  memory_pool.h.3B1F1C3F2DB27A65.idx  test_app_loopsend.cpp.4BEB32C18AAFADBD.idx  test_app_pcap.cpp.8B545DFB519F52D4.idx  test_fpga_hello_v2.cpp.A1609E484B5477BB.idx  vfio_dev.cpp.18135968EDE601F6.idx  vfio_dev.h.E9CB7FAE5F836B76.idx
cpp_src/: CMakeLists.txt  README.md  REORGANIZATION_SUMMARY.md  VFIO_REFACTORING_SUMMARY.md
cpp_src/common/: README.md  basic_dev.cpp  basic_dev.h  basic_ring_buffer.cpp  basic_ring_buffer.h  device.h  dma_memory_allocator.cpp  dma_memory_allocator.h  log.h  memory_pool.cpp  memory_pool.h
cpp_src/fpga_driver/: README_FPGA_HELLO.md  fpga_dev.cpp  fpga_dev.h  fpga_hello_dev.cpp  fpga_hello_dev.h  fpga_ring_buffer.cpp  fpga_ring_buffer.h  test_fpga_hello_v2.cpp
cpp_src/intel_driver/: README.md  factory.cpp  factory.h  ixgbe_ring_buffer.cpp  ixgbe_ring_buffer.h  ixgbe_type.h  test_app_loopsend.cpp  test_app_pcap.cpp  vfio_dev.cpp  vfio_dev.h
figures/: .$asn1 structure.png.bkp  .$rc_gearbox_design.png.bkp  .$rq_gearbox_design.png.bkp
note/Design/: CQ_CC_design.md  PCIe_Interface_Layer.md  RQ_formatter.md
note/Host_related/: memory_barriers.md
note/PCIe_UltraScale_IP_core/: CC channel.md  CQ channel.md  DMA_WRITE_EXPLAINED.md  PCIE_DESCRIPTOR_FORMATS.md  RC channel.md  RQ channel.md  clock_configuration.md  relationship.md
pics/: .$hierarchy.png.bkp  .$hierarchy.png.dtmp  ._.$hierarchy.png.dtmp
scripts/: reset_pcie.sh  setup-hugepages.sh  setup-vfio.sh
verilog_src/: Top.v  pcie_interface.v  user_logic.v
verilog_src/PCIe_related/: CC_formatter.v  CQ_parser.v  RC_gearbox256.v  RC_parser.v  RQ_formatter.v  RQ_gearbox256.v
verilog_src/individual_modules/: CC_formatter.v  CQ_parser.v  RC_parser.v  RQ_formatter.v
verilog_tb/: tb_RC_gearbox256.v  tb_RQ_gearbox256.v
